# study-pet

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs
src/components/: PetAvatar.tsx  TimerDisplay.tsx
src/hooks/: useDesktopWindow.ts  useStudyTimer.ts
src/services/: storage.ts  studySessionDb.ts  timerMachine.ts
src/types/: timer.ts
src/utils/: desktopDrag.ts  time.ts
